# GrabHack-Hackathon

./: README.md  create_embedding.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  tailwind.config.js
app/: app.py  chatbot.py  embeddings_rag.py  init_embeddings.py  test.py  tools_mcp.py
backend/: README.md  app.py  chatbot.py
backend/lambda/: handler.py
public/: GrabHack2025_ Executive Summary Submission.pptx
src/: App.js
src/components/: AuthPopup.jsx  Chatbot.jsx  GrabPayPopup.jsx  PayWithGrab.jsx  SplashScreen.jsx
src/pages/: ChatPage.jsx  LandingPage.jsx  LoginPage.jsx
vector_embeddings/: check_parquet_columns.py  payment_faq_vectorstore.parquet  ride-cover-personal-accident_vectorstore.parquet  travel_cover_vectorstore.parquet  travel_insurance_sbi_vectorstore.parquet
