[project]
name = "grabhack-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "chromadb>=1.0.15",
    "fastmcp>=2.10.1",
    "flask[async]>=3.1.1",
    "flask-cors>=6.0.1",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
]
